--- a/querqy-core/pom.xml
+++ b/querqy-core/pom.xml
@@ -86,6 +86,12 @@
             <version>${jackson.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.hamcrest</groupId>
